...
    <string name="co_edit_room">CO2 :</string>
    <string name="light_edit_room">Light :</string>
    <string name="save_changes">Save Changes</string>
    <string name="artwork">Artwork</string>
    <string name="room">Room</string>
    <string name="backSlash">/</string>
    <string name="login">Login</string>
    <string name="sendVisitors">Send visitors</string>
    <string name="co2">CO2</string>
    <string name="visualize">Visualize</string>
    <string name="light">Light</string>
    <string name="humidity">Humidity</string>
    <string name="min">min.</string>
...
    <string name="position4" translatable="false">4</string>
    <string name="position6" translatable="false">6</string>
    <string name="position8" translatable="false">8</string>
    <string name="position7" translatable="false">7</string>
    <string name="position5" translatable="false">5</string>
    <string name="position9" translatable="false">9</string>
    <string name="room_a1" translatable="false">A1</string>
    <string name="room_a2" translatable="false">A2</string>
    <string name="room_a3" translatable="false">A3</string>
    <string name="room_b1" translatable="false">B1</string>
    <string name="room_b2" translatable="false">B2</string>
    <string name="room_b3" translatable="false">B3</string>
    <string name="room_b4" translatable="false">B4</string>
...
