<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/room_A1_activity"
    tools:context=".view.museum.rooms.RoomA1Activity">

    <include layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/room_a1_image"
        android:layout_width="416dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/toolbar_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/room_a1"
        android:contentDescription="@string/museum_content_description" />

    <TextView
        android:id="@+id/artwork_place_6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/position6"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="@id/room_a1_image"
        app:layout_constraintEnd_toEndOf="@id/room_a1_image"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="@id/room_a1_image"
        app:layout_constraintTop_toTopOf="@id/room_a1_image"
        app:layout_constraintVertical_bias="0.749" />

    <TextView
        android:id="@+id/artwork_place_3"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="start"
        android:text="@string/position3"
        app:layout_constraintBottom_toBottomOf="@id/room_a1_image"
        app:layout_constraintEnd_toEndOf="@id/room_a1_image"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="@id/room_a1_image"
        app:layout_constraintTop_toTopOf="@id/room_a1_image"
        app:layout_constraintVertical_bias="0.524" />

    <TextView
        android:id="@+id/artwork_place_4"
        android:layout_width="69dp"
        android:layout_height="62dp"
        android:gravity="start"
        android:text="@string/position4"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/room_a1_image"
        app:layout_constraintEnd_toEndOf="@id/room_a1_image"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="@id/room_a1_image"
        app:layout_constraintTop_toTopOf="@id/room_a1_image"
        app:layout_constraintVertical_bias="0.366" />

    <TextView
        android:id="@+id/artwork_place_1"
        android:layout_width="61dp"
        android:layout_height="63dp"
        android:gravity="start"
        android:text="@string/position1"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/room_a1_image"
        app:layout_constraintEnd_toEndOf="@id/room_a1_image"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="@id/room_a1_image"
        app:layout_constraintTop_toTopOf="@id/room_a1_image"
        app:layout_constraintVertical_bias="0.773" />

    <TextView
        android:id="@+id/artwork_place_8"
        android:layout_width="60dp"
        android:layout_height="66dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="start"
        android:text="@string/position8"
        app:layout_constraintBottom_toBottomOf="@id/room_a1_image"
        app:layout_constraintEnd_toEndOf="@id/room_a1_image"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="@id/room_a1_image"
        app:layout_constraintTop_toTopOf="@id/room_a1_image"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/artwork_place_7"
        android:layout_width="65dp"
        android:layout_height="64dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="start"
        android:text="@string/position7"
        app:layout_constraintBottom_toBottomOf="@id/room_a1_image"
        app:layout_constraintEnd_toEndOf="@id/room_a1_image"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="@id/room_a1_image"
        app:layout_constraintTop_toTopOf="@id/room_a1_image"
        app:layout_constraintVertical_bias="0.427" />

    <TextView
        android:id="@+id/artwork_place_5"
        android:layout_width="68dp"
        android:layout_height="65dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="start"
        android:text="@string/position5"
        app:layout_constraintBottom_toBottomOf="@id/room_a1_image"
        app:layout_constraintEnd_toEndOf="@id/room_a1_image"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="@id/room_a1_image"
        app:layout_constraintTop_toTopOf="@id/room_a1_image"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/artwork_place_2"
        android:layout_width="64dp"
        android:layout_height="57dp"
        android:gravity="start"
        android:text="@string/position2"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/room_a1_image"
        app:layout_constraintEnd_toEndOf="@id/room_a1_image"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="@id/room_a1_image"
        app:layout_constraintTop_toTopOf="@id/room_a1_image"
        app:layout_constraintVertical_bias="0.673" />

    <TextView
        android:id="@+id/artwork_place_9"
        android:layout_width="64dp"
        android:layout_height="62dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="start"
        android:text="@string/position9"
        app:layout_constraintBottom_toBottomOf="@id/room_a1_image"
        app:layout_constraintEnd_toEndOf="@id/room_a1_image"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@id/room_a1_image"
        app:layout_constraintTop_toTopOf="@id/room_a1_image"
        app:layout_constraintVertical_bias="0.223" />

    <ProgressBar
        android:id="@+id/progress_bar_room_a1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>