...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/museum_layout"
    tools:context=".view.museum.MuseumTab">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/storage"
...
